--- a/src/components/GlobalHeader/index.less
+++ b/src/components/GlobalHeader/index.less
@@ -22,6 +22,7 @@
     align-items: center;
     height: 100%;
     padding: 0 12px;
+    font-size: 25px;
     cursor: pointer;
     transition: all 0.3s;
     > span {
