--- a/src/pages/Welcome.less
+++ b/src/pages/Welcome.less
@@ -1,8 +1,11 @@
 @import '~antd/lib/style/themes/default.less';
 
 .pre {
-  margin: 12px 0;
-  padding: 12px 20px;
-  background: @input-bg;
-  box-shadow: @card-shadow;
+  code{
+    padding: 4px 5px;
+  }
+}
+.iframe{
+  width: 100%;
+  height: 100%;
 }
