--- a/src/pages/document.ejs
+++ b/src/pages/document.ejs
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta
       name="keywords"
-      content="antd,umi,umijs,ant design,脚手架,布局, Ant Design,项目,Pro,admin,控制台,主页,开箱即用,中后台,解决方案,组件库"
+      content="地址智能识别,智能识别,收货地址,收货地址智能识别"
     />
     <meta
       name="description"
@@ -15,7 +15,7 @@
     <meta
       name="description"
       content="
-      开箱即用的中台前端/设计解决方案。"
+      地址智能识别"
     />
     <meta
       name="viewport"
@@ -191,7 +191,7 @@
           height: 100%;
         "
       >
-        <img src="<%= context.config.publicPath +'pro_icon.svg'%>" alt="logo" width="256" />
+        <img src="<%= context.config.publicPath +'smart.png'%>" alt="logo"  />
         <div class="page-loading-warp">
           <div class="ant-spin ant-spin-lg ant-spin-spinning">
             <span class="ant-spin-dot ant-spin-dot-spin"
@@ -206,9 +206,19 @@
             width="32"
             style="margin-right: 8px;"
           />
-          Ant Design
+          地址智能识别
         </div>
       </div>
     </div>
   </body>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-119026906-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-119026906-1');
+</script>
+
 </html>
