--- a/src/pages/document.ejs
+++ b/src/pages/document.ejs
@@ -10,7 +10,7 @@
     <meta
       name="description"
       content="
-    An out-of-box UI solution for enterprise applications as a React boilerplate."
+    帮你识别各项地址分类"
     />
     <meta
       name="description"
